--- a/src/main/resources/templates/confirm_order.html
+++ b/src/main/resources/templates/confirm_order.html
@@ -42,32 +42,32 @@
 									</a>
 									<ul class="dropdown-menu">
 										<li>
-											<a href="books_list.html">百货</a>
+											<a href="products_list.html">百货</a>
 										</li>
 										<li class="divider"></li>
 										<li>
-											<a href="books_list.html">美妆</a>
+											<a href="products_list.html">美妆</a>
 										</li>
 										<li class="divider"></li>
 										
 										<li>
-											<a href="books_list.html">家具</a>
+											<a href="products_list.html">家具</a>
 										</li>
 										<li class="divider"></li>
 										<li>
-											<a href="books_list.html">男装</a>
+											<a href="products_list.html">男装</a>
 										</li>
 										<li class="divider"></li>
 										<li>
-											<a href="books_list.html">女装</a>
+											<a href="products_list.html">女装</a>
 										</li>
 										<li class="divider"></li>
 										<li>
-											<a href="books_list.html">数码</a>
+											<a href="products_list.html">数码</a>
 										</li>
 										<li class="divider"></li>
 										<li>
-											<a href="books_list.html">母婴</a>
+											<a href="products_list.html">母婴</a>
 										</li>
 										<li class="divider"></li>
 									</ul>
