--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 	<head>
 		<meta charset="UTF-8">
-		<title>图书详情</title>
-		<link type="text/css" rel="stylesheet" href="dist/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/index.css" />
-		<link rel="stylesheet" type="text/css" href="css/animate.css" />
+		<title>商品详情</title>
+		<link rel="stylesheet" type="text/css"  href="dist/css/bootstrap.min.css" th:href="@{/dist/css/bootstrap.min.css}">
+		<link rel="stylesheet" type="text/css" href="css/index.css" th:href="@{/css/index.css}" />
+		<link rel="stylesheet" type="text/css" href="css/animate.css" th:href="@{/css/animate.css}" />
 	</head>
 
 	<body>
@@ -37,32 +37,32 @@
 									</a>
 									<ul class="dropdown-menu">
 										<li>
-											<a href="books_list.html">百货</a>
+											<a href="products_list.html">百货</a>
 										</li>
 										<li class="divider"></li>
 										<li>
-											<a href="books_list.html">美妆</a>
+											<a href="products_list.html">美妆</a>
 										</li>
 										<li class="divider"></li>
 										
 										<li>
-											<a href="books_list.html">家具</a>
+											<a href="products_list.html">家具</a>
 										</li>
 										<li class="divider"></li>
 										<li>
-											<a href="books_list.html">男装</a>
+											<a href="products_list.html">男装</a>
 										</li>
 										<li class="divider"></li>
 										<li>
-											<a href="books_list.html">女装</a>
+											<a href="products_list.html">女装</a>
 										</li>
 										<li class="divider"></li>
 										<li>
-											<a href="books_list.html">数码</a>
+											<a href="products_list.html">数码</a>
 										</li>
 										<li class="divider"></li>
 										<li>
-											<a href="books_list.html">母婴</a>
+											<a href="products_list.html">母婴</a>
 										</li>
 										<li class="divider"></li>
 									</ul>
@@ -140,17 +140,17 @@
 						<a href="#">商品详情</a>
 					</li>
 					<li>
-						<a href="#">愿你的青春不负梦想</a>
+						<a href="#" th:text="${product.name}">愿你的青春不负梦想</a>
 					</li>
 				</ol>
 
 				<div class="row">
 					<div class="col-sm-12 col-md-6">
 						<div class="thumbnail">
-							<a><img src="images/yuannideqingchunbufumengxiang.jpg" style="height: 200px;" alt="通用的占位符缩略图"></a>
+							<a><img src="images/yuannideqingchunbufumengxiang.jpg" th:src="@{'/public/' + ${product.imgUrl}}" style="height: 200px;" alt="通用的占位符缩略图"></a>
 							<div class="caption">
-								<h3>愿你的青春不负梦想</h3>
-								<p>包邮哟!亲<img src="images/3.gif" style="width: 24px;height: 24px;"></p>
+								<h3 th:text="${product.name}">愿你的青春不负梦想</h3>
+								<p>包邮哟!亲<img src="images/3.gif"  th:src="@{/images/3.gif}" style="width: 24px;height: 24px;"></p>
 								<p>
 									<div style="margin-bottom: 5px;width: 100px;">
 										<input type="number" class="form-control" placeholder="购买数量" min="1" max="100" onclick="selectByCount(this)">
@@ -160,7 +160,7 @@
 										<a href="confirm_order.html" class="btn btn-default" role="button">
 											<span class="glyphicon glyphicon-usd"></span> 立即购买
 										</a>
-										<a href="cart.html" class="btn btn-default" role="button">
+										<a href="javascript:void(0)" th:onclick="addCart([[${product.id}]])" class="btn btn-default" role="button">
 											<span class="glyphicon glyphicon-shopping-cart"></span> 加入购物车
 										</a>
 									</div>
@@ -172,13 +172,12 @@
 					<div class="col-sm-12 col-md-6">
 						<div class="thumbnail">
 							<ul class="list-group">
-								<li class="list-group-item"><span class="text-success">商品名称:愿你的青春不负梦想</span></li>
-								<li class="list-group-item"><span class="text-info">作者:</span>俞敏洪</li>
-								<li class="list-group-item"><span class="text-info">出版日期:2017年01月</span></li>
-								<li class="list-group-item"><span class="text-info">出版社:</span>湖南文艺出版社</li>
-								<li class="list-group-item"><span class="text-info" style="text-decoration: line-through;">原价:</span><span style="text-decoration: line-through;">$36元</span></li>
-								<li class="list-group-item"><span class="text-info">现价:</span>$21.6元</li>
-								<li class="list-group-item"><span class="text-info">说明:</span> 50年心路历程×25年创业思考×80场演讲精华，与不甘平庸的你，谈谈如何度过不悔的青春，实现你心中的梦想。
+								<li class="list-group-item"><span class="text-success">图书名称:<span th:text="${product.name}">愿你的青春不负梦想</span></span></li>
+								<li class="list-group-item"><span class="text-info">商家:</span><span th:text="${product.bossId}">俞敏洪</span></li>
+
+								<li class="list-group-item"><span class="text-info" style="text-decoration: line-through;">原价:</span><span style="text-decoration: line-through;" th:text="${'$' + product.oldPrice + '元'}">$36元</span></li>
+								<li class="list-group-item"><span class="text-info">现价:</span><span th:text="${'$' + product.newPrice + '元'}">$21.6元</span></li>
+								<li class="list-group-item"><span class="text-info">说明:</span> <span th:text="${product.info}">50年心路历程×25年创业思考×80场演讲精华，与不甘平庸的你，谈谈如何度过不悔的青春，实现你心中的梦想。</span>
 								</li>
 							</ul>
 						</div>
@@ -214,21 +213,18 @@
 									</p>
 									<div class="row">
 										<div class="col-sm-12 col-md-6">
-											<ul class="nav navbar-collapse" style="line-height: 3;>
+											<ul class="nav navbar-collapse" style="line-height: 3;">
 												<li class="text-info">产品名称：愿你的青春不负梦想</li>
-												<li class="text-info">是否是套装: 否</li>
-												<li class="text-info">书名:愿你的青春不负梦想</li>
-												<li class="text-info">定价: 36.00元</li>
-												<li class="text-info">出版社名称: 湖南文艺出版社</li>
-												<li class="text-info">出版时间: 2017年01月</li>
-												<li class="text-info">作者: 俞敏洪</li>
-												<li class="text-info">作者地区: 中国</li>
-												<li class="text-info">书名: 愿你的青春不负梦想</li>
-												<li class="text-info">ISBN编号: 9787540478612</li>
+											<li class="text-info">产品名称：<span th:text="${product.name}">愿你的青春不负梦想</span></li>
+
+											<li class="text-info">市场价: <span th:text="${product.oldPrice + '元'}">36.00元</span></li>
+
+											<li class="text-info">商家: <span th:text="${product.bossId}">俞敏洪</span></li>
+
 											</ul>
 										</div>
 										<span class="visible-sm visible-xs"><hr></span>
-										
+
 									</div>
 									</p>
 								</div>
@@ -313,7 +309,7 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<!-- <div class="container">
 			<hr>
 			<!--首页底部信息 begin-->
@@ -343,17 +339,51 @@
 					</div>
 				</div>
 			</div>
-		</div> -->
 
-		<script src="dist/js/jquery.min.js"></script>
-		<script src="js/wow.js"></script>
-		<script src="js/carousel.js" type="text/javascript"></script>
-		<script src="dist/js/bootstrap.min.js"></script>
-		<script src="js/details.js" type="text/javascript" charset="utf-8"></script>
+
+		<script src="dist/js/jquery.min.js" th:src="@{/dist/js/jquery.min.js}"></script>
+		<script src="js/carousel.js" th:src="@{/js/carousel.js}" type="text/javascript" charset="utf-8"></script>
+		<script src="dist/js/bootstrap.min.js" th:src="@{/dist/js/bootstrap.min.js}"></script>
+		<script src="js/wow.js" th:src="@{/js/wow.js}"></script>
+		<script src="js/details.js" th:src="@{/js/details.js}" type="text/javascript" charset="utf-8"></script>
+		<script th:src="@{/js/login_reg.js}"></script>
+		<script th:inline="javascript">
+			var contextPath = [[${#request.getContextPath()}]];
+			var user = [[${session.user}]];
+		</script>
 		<script type="text/javascript">
 			if(!(/msie [6|7|8|9]/i.test(navigator.userAgent))) {
 				new WOW().init();
 			};
+
+			//进入购物车
+			function addCart(bookId) {
+				//验证购买图书数量
+				var bookNum = $("#bookCount").val();
+				if(bookNum == '' || bookNum == 'undefined'){
+					alert("请输入购买数量！");
+					return;
+				}
+				//验证用户是否已经登录
+				if(user == '' || user == null){
+					alert("请先登录！");
+					return;
+				}
+
+				//加入购物车
+				$.ajax({
+					url: contextPath + "/cart/add",
+					data:{'count' : bookNum,'bookId' : bookId},
+					method:"post",
+					success:function (data) {
+						if(data == 'success'){
+							//跳转到购物车列表
+							window.location.href = contextPath + "/cart/list";
+						}
+					}
+				})
+			}
+
 		</script>
 	</body>
 </html>
