--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -147,50 +147,60 @@
 				<div class="row">
 					<div class="col-sm-12 col-md-6">
 						<div class="thumbnail">
-							<a><img src="images/yuannideqingchunbufumengxiang.jpg" th:src="@{'/public/' + ${product.imgUrl}}" style="height: 200px;" alt="通用的占位符缩略图"></a>
+							<a><img src="images/yuannideqingchunbufumengxiang.jpg"
+									th:src="@{'/public/' + ${product.imgUrl}}" style="height: 200px;"
+									alt="通用的占位符缩略图"></a>
 							<div class="caption">
 								<h3 th:text="${product.name}">愿你的青春不负梦想</h3>
-								<p>包邮哟!亲<img src="images/3.gif"  th:src="@{/images/3.gif}" style="width: 24px;height: 24px;"></p>
+								<p>包邮哟!亲<img src="images/3.gif" th:src="@{/images/3.gif}"
+											 style="width: 24px;height: 24px;"></p>
 								<p>
-									<div style="margin-bottom: 5px;width: 100px;">
-										<input type="number" class="form-control" placeholder="购买数量" min="1" max="100" onclick="selectByCount(this)">
-									</div>
-									<div style="clear: both;">
-										<!--<input type="number" class="form-control" placeholder="请输入" min="1" max="100" onclick="selectByCount(this)">-->
-										<a href="confirm_order.html" class="btn btn-default" role="button">
-											<span class="glyphicon glyphicon-usd"></span> 立即购买
-										</a>
-										<a href="javascript:void(0)" th:onclick="addCart([[${product.id}]])" class="btn btn-default" role="button">
-											<span class="glyphicon glyphicon-shopping-cart"></span> 加入购物车
-										</a>
-									</div>
+								<div style="margin-bottom: 5px;width: 100px;">
+									<input type="number" id="productCount" class="form-control" placeholder="购买数量"
+										   min="1" max="100" onclick="selectByCount(this)">
+								</div>
+								<div style="clear: both;">
+									<!--<input type="number" class="form-control" placeholder="请输入" min="1" max="100" onclick="selectByCount(this)">-->
+									<a href="confirm_order.html" class="btn btn-default" role="button">
+										<span class="glyphicon glyphicon-usd"></span> 立即购买
+									</a>
+									<a class="btn btn-default" href="javascript:void(0)"
+									   role="button" th:onclick="addCart([[ ${product.id} ]])">
+										<span class="glyphicon glyphicon-shopping-cart"></span> 加入购物车
+									</a>
+								</div>
 								</p>
 							</div>
-						</div>
-					</div>
 
-					<div class="col-sm-12 col-md-6">
-						<div class="thumbnail">
 							<ul class="list-group">
-								<li class="list-group-item"><span class="text-success">图书名称:<span th:text="${product.name}">愿你的青春不负梦想</span></span></li>
-								<li class="list-group-item"><span class="text-info">商家:</span><span th:text="${product.bossId}">俞敏洪</span></li>
+								<li class="list-group-item"><span class="text-success">图书名称:<span
+										th:text="${product.name}">愿你的青春不负梦想</span></span></li>
+								<li class="list-group-item"><span class="text-info">商家:</span><span
+										th:text="${product.bossId}">俞敏洪</span></li>
 
-								<li class="list-group-item"><span class="text-info" style="text-decoration: line-through;">原价:</span><span style="text-decoration: line-through;" th:text="${'$' + product.oldPrice + '元'}">$36元</span></li>
-								<li class="list-group-item"><span class="text-info">现价:</span><span th:text="${'$' + product.newPrice + '元'}">$21.6元</span></li>
-								<li class="list-group-item"><span class="text-info">说明:</span> <span th:text="${product.info}">50年心路历程×25年创业思考×80场演讲精华，与不甘平庸的你，谈谈如何度过不悔的青春，实现你心中的梦想。</span>
+								<li class="list-group-item"><span class="text-info"
+																  style="text-decoration: line-through;">原价:</span><span
+										style="text-decoration: line-through;"
+										th:text="${'$' + product.oldPrice + '元'}">$36元</span></li>
+								<li class="list-group-item"><span class="text-info">现价:</span><span
+										th:text="${'$' + product.newPrice + '元'}">$21.6元</span></li>
+								<li class="list-group-item"><span class="text-info">说明:</span> <span
+										th:text="${product.info}">50年心路历程×25年创业思考×80场演讲精华，与不甘平庸的你，谈谈如何度过不悔的青春，实现你心中的梦想。</span>
 								</li>
 							</ul>
 						</div>
+
 					</div>
+
 				</div>
 				<!--<hr>-->
 				<!--折叠部分 begin-->
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h4 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-							展开详细信息
-						</a>
+							<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+								展开详细信息
+							</a>
 						</h4>
 					</div>
 					<div id="collapseTwo" class="panel-collapse collapse">
@@ -215,11 +225,14 @@
 										<div class="col-sm-12 col-md-6">
 											<ul class="nav navbar-collapse" style="line-height: 3;">
 												<li class="text-info">产品名称：愿你的青春不负梦想</li>
-											<li class="text-info">产品名称：<span th:text="${product.name}">愿你的青春不负梦想</span></li>
+												<li class="text-info">产品名称：<span
+														th:text="${product.name}">愿你的青春不负梦想</span></li>
 
-											<li class="text-info">市场价: <span th:text="${product.oldPrice + '元'}">36.00元</span></li>
+												<li class="text-info">市场价: <span th:text="${product.oldPrice + '元'}">36.00元</span>
+												</li>
 
-											<li class="text-info">商家: <span th:text="${product.bossId}">俞敏洪</span></li>
+												<li class="text-info">商家: <span th:text="${product.bossId}">俞敏洪</span>
+												</li>
 
 											</ul>
 										</div>
@@ -230,21 +243,31 @@
 								</div>
 								<div class="tab-pane fade" id="ios">
 									<p>
-										<ul class="list-group">
-											<li class="list-group-item"><span class="text-info">小明:</span><span class="text-success ">这真的是一本好书<img src="images/emotions/1.gif "></span></li>
-											<li class="list-group-item"><span class="text-info">success:</span><span class="text-danger ">书的质量很差<img src="images/emotions/2.gif "></span></li>
-											<li class="list-group-item"><span class="text-info">叶老师:</span><span class="text-success ">很值得初学者学习<img src="images/emotions/13.gif "></span></li>
-											<li class="list-group-item"><span class="text-info">amdin:</span><span class="text-danger ">被坑大发了.<img src="images/emotions/17.gif "></span></li>
-											<li class="list-group-item"><span class="text-info">rose:</span><span class="text-danger ">卖家态度恶劣.<img src="images/emotions/11.gif "></span></li>
-										</ul>
+									<ul class="list-group">
+										<li class="list-group-item"><span class="text-info">小明:</span><span
+												class="text-success ">这真的是一本好书<img src="images/emotions/1.gif "></span>
+										</li>
+										<li class="list-group-item"><span class="text-info">success:</span><span
+												class="text-danger ">书的质量很差<img src="images/emotions/2.gif "></span>
+										</li>
+										<li class="list-group-item"><span class="text-info">叶老师:</span><span
+												class="text-success ">很值得初学者学习<img src="images/emotions/13.gif "></span>
+										</li>
+										<li class="list-group-item"><span class="text-info">amdin:</span><span
+												class="text-danger ">被坑大发了.<img src="images/emotions/17.gif "></span>
+										</li>
+										<li class="list-group-item"><span class="text-info">rose:</span><span
+												class="text-danger ">卖家态度恶劣.<img src="images/emotions/11.gif "></span>
+										</li>
+									</ul>
 									</p>
 									<p>
-										<ul class="pager">
-											<li>
-												<a href="# ">&larr;上一页</a>
-												<a href="# ">下一页 &rarr;</a>
-											</li>
-										</ul>
+									<ul class="pager">
+										<li>
+											<a href="# ">&larr;上一页</a>
+											<a href="# ">下一页 &rarr;</a>
+										</li>
+									</ul>
 									</p>
 								</div>
 							</div>
@@ -271,11 +294,14 @@
 
 				<!--猜您喜欢-->
 				<div>
-					<span class="text-info"><span class="glyphicon glyphicon-heart"></span><span style="font-size: 20px; ">猜您喜欢</span></span>
+					<span class="text-info"><span class="glyphicon glyphicon-heart"></span><span
+							style="font-size: 20px; ">猜您喜欢</span></span>
 					<div class="row" id="love">
 						<div class="col-sm-12 col-md-12 wow fadeInRight animated">
 							<div class="thumbnail">
-								<a href="details.html"><img src="images/xiaodaolifencunzhijian.jpg " style="height: 200px; " alt="通用的占位符缩略图 "></a>
+								<a href="details.html"><img src="images/xiaodaolifencunzhijian.jpg "
+															th:src="@{/images/xiaodaolifencunzhijian.jpg}"
+															style="height: 200px; " alt="通用的占位符缩略图 "></a>
 								<div class="caption ">
 									<h3>小道理：分寸之间</h3>
 								</div>
@@ -283,7 +309,9 @@
 						</div>
 						<div class="col-sm-12 col-md-12 wow fadeInRight animated">
 							<div class="thumbnail ">
-								<a href="details.html"><img src="images/NO SECRETS.jpg " style="height: 200px; " alt="通用的占位符缩略图 "></a>
+								<a href="details.html"><img src="images/NO SECRETS.jpg "
+															th:src="@{/images/NO SECRETS.jpg}" style="height: 200px; "
+															alt="通用的占位符缩略图 "></a>
 								<div class="caption ">
 									<h3>名创优品没有秘密</h3>
 								</div>
@@ -291,7 +319,9 @@
 						</div>
 						<div class="col-sm-12 col-md-12 wow fadeInRight animated">
 							<div class="thumbnail ">
-								<a href="details.html"><img src="images/maichanpinjiushimaiziji.jpg" style="height: 200px; " alt="通用的占位符缩略图 "></a>
+								<a href="details.html"><img src="images/maichanpinjiushimaiziji.jpg"
+															th:src="@{/images/maichanpinjiushimaiziji.jpg}"
+															style="height: 200px; " alt="通用的占位符缩略图 "></a>
 								<div class="caption ">
 									<h3>卖产品就是卖自己</h3>
 								</div>
@@ -308,37 +338,32 @@
 					</div>
 				</div>
 			</div>
-		</div>
 
-		<!-- <div class="container">
-			<hr>
-			<!--首页底部信息 begin-->
-			<div class="container">
-				<div class="row">
-					<div class="col-md-offset-2 col-md-8">
-						<div class="row">
-							<div class="col-md-offset-2 col-md-2">
-								<img src="images/logo.png">
-							</div>
-							<div class="col-md-6" style="margin-top: 10px;">
-								<div class="row">
-									<div class="col-md-offset-2 col-md-10">
-										<a href="http://www.gem-inno.com/">南昌大学综合实验班&copy;所有</a>
-									</div>
+			<div class="row">
+				<div class="col-md-offset-2 col-md-8">
+					<div class="row">
+						<div class="col-md-offset-2 col-md-2">
+							<img src="images/logo.png">
+						</div>
+						<div class="col-md-6" style="margin-top: 10px;">
+							<div class="row">
+								<div class="col-md-offset-2 col-md-10">
+									<a href="http://www.gem-inno.com/">南昌大学综合实验班&copy;所有</a>
 								</div>
-								<div class="gap"></div>
-								<div class="row">
-									<div class="col-md-offset-2 col-md-10">
-										<span class="text-info">南昌大学&reg; |&nbsp;</span>
-										<span class="text-info"><a href="http://www.xmgc360.com">购物系统</a> |&nbsp;</span>
-										<span class="text-info">2019－2020 </span>
-									</div>
+							</div>
+							<div class="gap"></div>
+							<div class="row">
+								<div class="col-md-offset-2 col-md-10">
+									<span class="text-info">南昌大学&reg; |&nbsp;</span>
+									<span class="text-info"><a href="http://www.xmgc360.com">购物系统</a> |&nbsp;</span>
+									<span class="text-info">2019－2020 </span>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
 
 
 		<script src="dist/js/jquery.min.js" th:src="@{/dist/js/jquery.min.js}"></script>
@@ -357,10 +382,11 @@
 			};
 
 			//进入购物车
-			function addCart(bookId) {
+			function addCart(productId) {
 				//验证购买图书数量
-				var bookNum = $("#bookCount").val();
-				if(bookNum == '' || bookNum == 'undefined'){
+				var productNum = $("#productCount").val();
+
+				if(productNum == '' || productNum == 'undefined'){
 					alert("请输入购买数量！");
 					return;
 				}
@@ -373,7 +399,7 @@
 				//加入购物车
 				$.ajax({
 					url: contextPath + "/cart/add",
-					data:{'count' : bookNum,'bookId' : bookId},
+					data:{'count' : productNum,'thingId' : productId},
 					method:"post",
 					success:function (data) {
 						if(data == 'success'){
