--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -68,20 +68,23 @@
 									</ul>
 								</li>
 							</li>
-							<li>
-								<a href="#" data-toggle="modal" data-target="#myModal">登录</a>
+							<li th:if="${session.user==null}">
+								<a href="#" data-toggle="modal" data-target="#loginModal">登录</a>
 							</li>
-							<li>
-								<a href="index.html">安全退出</a>
+							<li th:if="${session.user!=null}">
+								<a href="javascript:void (0)" th:text="${session.user.username}">安全退出</a>
 							</li>
-							<li>
+							<li th:if="${session.user!=null}">
+								<a href="index.html" th:href="@{/user/logout}">安全退出</a>
+							</li>
+							<li th:if="${session.user==null}">
 								<a href="#" data-toggle="modal" data-target="#register">注册</a>
 							</li>
 							<li>
 								<a href="order_list.html">我的订单</a>
 							</li>
 							<li>
-								<a href="cart.html"><span class="glyphicon glyphicon-shopping-cart"> </span>我的购物车</a>
+								<a href="cart.html" th:href="@{/cart/list}"><span class="glyphicon glyphicon-shopping-cart"> </span>我的购物车</a>
 							</li>
 						</ul>
 						<div class="input-group col-md-3 pull-right" style="positon:relative;padding: 7px;">
@@ -111,15 +114,15 @@
 				<!-- 轮播（Carousel）项目 -->
 				<div class="carousel-inner">
 					<div class="item active">
-						<a href="details.html"><img src="images/advert1.jpg" class="pull-left" alt="First slide"></a>
+						<a href="details.html"><img src="images/advert1.jpg" th:src="@{/images/advert1.jpg}" class="pull-left" alt="First slide"></a>
 					
 					</div>
 					<div class="item">
-						<a href="details.html"><img src="images/advert2.jpg" class="pull-left" alt="First slide"></a>
+						<a href="details.html"><img src="images/advert2.jpg" th:src="@{/images/advert2.jpg}" classclass="pull-left" alt="First slide"></a>
 						
 					</div>
 					<div class="item">
-						<a href="details.html"><img src="images/advert3.jpg" class="pull-left" alt="First slide"></a>
+						<a href="details.html"><img src="images/advert3.jpg" th:src="@{/images/advert3.jpg}" classclass="pull-left" alt="First slide"></a>
 					
 					</div>
 				</div>
@@ -230,38 +233,38 @@
 		<!--图书内容部分end-->
 
 		<!-- 登录模态框（Modal） -->
-		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 					&times;
 				</button>
-						<h4 class="modal-title" id="myModalLabel">
+						<h4 class="modal-title" id="loginModalLabel">
 					用户登录
 				</h4>
 					</div>
 					<div class="modal-body">
 						<!--登录的form表单-->
-						<form class="form-horizontal" role="form" action="">
+						<form id="loginForm" class="form-horizontal" role="form" action="">
 							<div class="form-group has-feedback">
-								<label for="firstname" class="col-sm-2 control-label">用户名</label>
+								<label class="col-sm-2 control-label">用户名</label>
 								<div class="col-sm-5">
 
-									<input type="text" class="form-control" id="firstname" placeholder="请输入用户名">
+									<input type="text" class="form-control" name="username"  placeholder="请输入用户名">
 									<span class="glyphicon glyphicon-user form-control-feedback"></span>
 								</div>
-								<div class="col-sm-3" style="padding-top: 10px;">
+								<div class="col-sm-3" id="userTip" style="padding-top: 10px;display: none">
 									<label class="alert-danger">用户名不存在</label>
 								</div>
 							</div>
 							<div class="form-group has-feedback">
-								<label for="lastname" class="col-sm-2 control-label">密码</label>
+								<label  class="col-sm-2 control-label">密码</label>
 								<div class="col-sm-5">
-									<input type="text" class="form-control" id="lastname" placeholder="请输入密码">
+									<input type="password" class="form-control" name="password" placeholder="请输入密码">
 									<span class="glyphicon glyphicon-lock form-control-feedback"></span>
 								</div>
-								<div class="col-sm-3" style="padding-top: 10px;">
+								<div class="col-sm-3" id="pwdTip" style="padding-top: 10px;display: none">
 									<label class="alert-danger">密码不正确</label>
 								</div>
 							</div>
@@ -276,7 +279,7 @@
 							</div>
 							<div class="modal-footer">
 								<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-								<input type="submit" class="btn btn-primary" value="登录">
+								<input type="button" class="btn btn-primary" value="登录" th:onclick="|login()|">
 							</div>
 						</form>
 						<!--form结束-->
@@ -286,7 +289,7 @@
 			</div>
 		</div>
 		<!-- 登录modal end/.modal -->
-		<div class="modal fade" id="register" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal fade" id="register" tabindex="-1" role="dialog" aria-labelledby="regModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -299,21 +302,21 @@
 					</div>
 					<div class="modal-body">
 						<!--登录的form表单-->
-						<form action="" class="form-horizontal" role="form">
+						<form id="regForm" action="" class="form-horizontal" role="form">
 							<div class="form-group has-feedback">
-								<label for="firstname" class="col-sm-2 control-label">用户名</label>
+								<label  class="col-sm-2 control-label">用户名</label>
 								<div class="col-sm-5">
-									<input type="text" class="form-control"  required placeholder="小写字母开头,不含中文." th:onblur="|checkUser(this)|">
+									<input type="text" name="username" class="form-control"  required placeholder="小写字母开头,不含中文." th:onblur="|checkUser(this)|">
 									<span class="glyphicon glyphicon-user form-control-feedback"></span>
 								</div>
-								<!--<div class="col-sm-3" style="padding-top: 10px;">
-									<label class="alert-danger">用户名不合法</label>
-								</div>-->
+								<div id="msg" class="col-sm-3" style="padding-top: 10px; display: none">
+									<label class="alert-danger" id="tip">用户名不合法</label>
+								</div>
 							</div>
 							<div class="form-group has-feedback">
-								<label for="lastname" class="col-sm-2 control-label">密码</label>
+								<label  class="col-sm-2 control-label">密码</label>
 								<div class="col-sm-5">
-									<input type="password" class="form-control"  placeholder="密码长度6-8位" minlength="6" maxlength="8">
+									<input type="password" name="password" class="form-control"  placeholder="密码长度6-8位" minlength="6" maxlength="8">
 									<span class="glyphicon glyphicon-lock form-control-feedback"></span>
 								</div>
 								<!--<div class="col-sm-3" style="padding-top: 10px;">
@@ -328,18 +331,18 @@
 								</div>
 							</div>
 
-							<div class="form-group has-feedback">
-								<label class="col-sm-2 control-label">邮箱</label>
-								<div class="col-sm-5">
-									<input type="email" class="form-control" placeholder="合法邮箱格式">
-									<span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-								</div>
-							</div>
+							<!--<div class="form-group has-feedback">-->
+								<!--<label class="col-sm-2 control-label">邮箱</label>-->
+								<!--<div class="col-sm-5">-->
+									<!--<input type="email" class="form-control" placeholder="合法邮箱格式">-->
+									<!--<span class="glyphicon glyphicon-envelope form-control-feedback"></span>-->
+								<!--</div>-->
+							<!--</div>-->
 
 							<div class="form-group has-feedback">
 								<label class="col-sm-2 control-label">电话</label>
 								<div class="col-sm-5">
-									<input type="tel" class="form-control" placeholder="合法手机格式">
+									<input type="tel" name="phone" class="form-control" placeholder="合法手机格式">
 									<span class="glyphicon glyphicon-earphone form-control-feedback"></span>
 								</div>
 							</div>
@@ -347,7 +350,7 @@
 							<div class="form-group has-feedback">
 								<label class="col-sm-2 control-label">公司</label>
 								<div class="col-sm-5">
-									<input type="text" class="form-control"  placeholder="请输入公司地址">
+									<input type="text" name="company" class="form-control"  placeholder="请输入公司地址">
 									<span class="glyphicon glyphicon-home form-control-feedback"></span>
 								</div>
 							</div>
@@ -362,7 +365,7 @@
 
 							<div class="modal-footer">
 								<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-								<input type="submit" class="btn btn-primary" value="注册">
+								<input type="button" class="btn btn-primary" value="注册" th:onclick="|register()|">
 							</div>
 						</form>
 						<!--form结束-->
@@ -417,7 +420,60 @@
 			}
 
 			function checkUser(obj) {
-				alert(obj.value);
+
+				$.ajax({
+					url: contextPath+"/user/checkUserName",
+					data:{"username":obj.value},
+					method:"post",
+					success:function (data) {
+						$("#msg").css("display","block");
+						if (data==102){
+							$("#tip").html("用户名不可注册");
+							$("#tip").removeClass("alert-success");
+							$("#tip").addClass("alert-danger");
+						} else {
+
+							$("#tip").html("用户名可以注册");
+							$("#tip").removeClass("alert-danger");
+							$("#tip").addClass("alert-success");
+						}
+					}
+				})
+			}
+			function register() {
+				var datas=$("#regForm").serialize();
+				$.ajax({
+					url: contextPath+"/user/register",
+					data:datas,
+					method:"post",
+					success:function (data) {
+						if (data=='success'){
+							alert("注册成功，请登录！");
+							 $("#register").modal("hide");
+						}
+					}
+				})
+			}
+			function login() {
+				var datas=$("#loginForm").serialize();
+				$.ajax({
+					url: contextPath+"/user/login",
+					data:datas,
+					method:"post",
+					success:function (data) {
+						$("#userTip").css("display","none");
+						$("#pwdTip").css("display","none");
+						if (data==100){
+
+							$("#loginModal").modal("hide");
+							window.location.href=contextPath+"/prod/index";
+						}else if (data==101){
+							$("#userTip").css("display","block");
+						} else{
+							$("#pwdTip").css("display","block");
+						}
+					}
+				})
 			}
 		</script>
 	</body>
