提交剩余帖子部分

--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -73,8 +73,11 @@
                         <li th:if="${session.user!=null}">
                             <a href="order_list.html" th:href="@{/order/list}">我的订单</a>
                         </li>
-                        <li>
+                        <li th:if="${session.user!=null}">
                             <a href="cart.html" th:href="@{/cart/list}"><span class="glyphicon glyphicon-shopping-cart"> </span>我的购物车</a>
+                        </li>
+                        <li>
+                            <a href="#" th:href="@{/bbs/all}">交流贴吧</a>
                         </li>
                     </ul>
                     <div class="input-group col-md-3 pull-right" style="positon:relative;padding: 7px;">
