--- a/src/main/resources/templates/Admin_shop.html
+++ b/src/main/resources/templates/Admin_shop.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html  class="no-js" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
@@ -119,7 +119,7 @@
                         </tbody>
                     </table>
                     <div class="am-cf">
-                        共<div th:text="${shops.size()}">1</div>条
+                        共<span th:text="${shops.size()}">1</span>条
 
                     </div>
                     <hr />
