--- a/src/main/resources/templates/Admin_login.html
+++ b/src/main/resources/templates/Admin_login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -70,7 +70,7 @@
 </script>
 <script th:inline="javascript">
     var contextPath = [[${#request.getContextPath()}]];
-    var user = [[${session.user}]];
+    
 </script>
 <script type="text/javascript">
     function checkForm() {
