--- a/src/main/resources/templates/shop_add.html
+++ b/src/main/resources/templates/shop_add.html
@@ -18,6 +18,7 @@
             position: relative;
             display: inline-block;
             overflow: hidden;
+            text-align: center;
         }
 
         .fileinput-button input{
