--- a/src/main/resources/templates/bbs_easy.html
+++ b/src/main/resources/templates/bbs_easy.html
@@ -52,16 +52,14 @@
 						<div class="indexCon_msg_detail">
 							<a href="">
 								<div class="indexCon_msg_detail_tittle">
-									<span>竞拍</span>
-									<p>关注上海车牌竞拍方面的资讯，对当月竞拍分析发表独到见解</p>
+
 								</div>
 							</a>
 							<div class="indexCon_msg_detail_other">
 								<ul>
-									<li>花开花落</li>
-									<li>1天前</li>
-									<li>21</li>
-									<li>28</li>
+									<li th:text="${bbs.username}">花开花落</li>
+									<li th:text="${#calendars.format(bbs.time,'yyyy-MM-dd HH:mm:ss')}">1天前</li>
+
 								</ul>
 							</div>
 						</div>
@@ -70,7 +68,10 @@
 
 					<!--无主题图循环结束-->
 
+
             	</div>
+				<br>
+				<a class="btn btn-info "  th:href="@{/bbs/edit}">发帖</a>
 			</div>
 			<div class="col-md-4 col-sm-3 col-xs-8">
 				<ol class="breadcrumb ">
@@ -78,38 +79,45 @@
 						<a href="# " class="text-success "><span class="glyphicon glyphicon-shopping-cart "></span>我的购物车</a>
 					</li>
 					<li>
-						<a href="# ">3个商品</a>
+						<a href="# " th:text="${session.userCartInfo.num+'个商品'}">3个商品</a>
 					</li>
 					<li>
-						<a href="# ">总价100元</a>
+						<a href="# " th:text="${'总价'+session.userCartInfo.totalPrice+'元'}">总价100元</a>
 					</li>
 				</ol>
 
 				<!--猜您喜欢-->
 				<div>
-					<span class="text-info"><span class="glyphicon glyphicon-heart"></span><span style="font-size: 20px; ">猜您喜欢</span></span>
+					<span class="text-info"><span class="glyphicon glyphicon-heart"></span><span
+							style="font-size: 20px; ">猜您喜欢</span></span>
 					<div class="row" id="love">
 						<div class="col-sm-12 col-md-12 wow fadeInRight animated">
 							<div class="thumbnail">
-								<a href="details.html"><img src="images/xiaodaolifencunzhijian.jpg " style="height: 200px; " alt="通用的占位符缩略图 "></a>
+								<a href="details.html"  th:href="@{/prod/detail(id=${3})}"><img src="images/xiaodaolifencunzhijian.jpg "
+																								th:src="@{/images/bi.jpg}"
+																								style="height: 200px; " alt="通用的占位符缩略图 "></a>
 								<div class="caption ">
-									<h3>小道理：分寸之间</h3>
+									<h3>中性笔</h3>
 								</div>
 							</div>
 						</div>
 						<div class="col-sm-12 col-md-12 wow fadeInRight animated">
 							<div class="thumbnail ">
-								<a href="details.html"><img src="images/NO SECRETS.jpg " style="height: 200px; " alt="通用的占位符缩略图 "></a>
+								<a href="details.html" th:href="@{/prod/detail(id=${1})}"><img src="images/NO SECRETS.jpg "
+																							   th:src="@{/images/mate30.jpg}" style="height: 200px; "
+																							   alt="通用的占位符缩略图 "></a>
 								<div class="caption ">
-									<h3>名创优品没有秘密</h3>
+									<h3>华为mate30</h3>
 								</div>
 							</div>
 						</div>
 						<div class="col-sm-12 col-md-12 wow fadeInRight animated">
 							<div class="thumbnail ">
-								<a href="details.html"><img src="images/maichanpinjiushimaiziji.jpg" style="height: 200px; " alt="通用的占位符缩略图 "></a>
+								<a href="details.html"  th:href="@{/prod/detail(id=${2})}"><img src="images/maichanpinjiushimaiziji.jpg"
+																								th:src="@{/images/jiandao.jpg}"
+																								style="height: 200px; " alt="通用的占位符缩略图 "></a>
 								<div class="caption ">
-									<h3>卖产品就是卖自己</h3>
+									<h3>剪刀</h3>
 								</div>
 							</div>
 						</div>
