--- a/src/main/resources/templates/confirm_order.html
+++ b/src/main/resources/templates/confirm_order.html
@@ -16,92 +16,7 @@
 		</style>
 	</head>
 	<body>
-		<!--导航部分  begin-->
-		<!--<div class="container" style="margin-top: 5px;">-->
-			<!--<nav class="navbar navbar-default well-sm" style="padding-left: 0px;" role="navigation">-->
-				<!--<div class="container-fluid">-->
-					<!--<div class="navbar-header">-->
-						<!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse">-->
-				            <!--<span class="sr-only">切换导航</span>-->
-				            <!--<span class="icon-bar"></span>-->
-				            <!--<span class="icon-bar"></span>-->
-				            <!--<span class="icon-bar"></span>-->
-        				<!--</button>-->
-						<!--<a class="navbar-brand" href="#">购物网</a>-->
-					<!--</div>-->
-					<!--<div class="collapse navbar-collapse" id="example-navbar-collapse">-->
-						<!--<ul class="nav navbar-nav pull-left">-->
-							<!--<li class="active">-->
-								<!--<a href="index.html">首页</a>-->
-							<!--</li>-->
-					<!---->
-							<!--<li>-->
-								<!--<li class="dropdown">-->
-									<!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
-										<!--商品类型-->
-										<!--<b class="caret"></b>-->
-									<!--</a>-->
-									<!--<ul class="dropdown-menu">-->
-										<!--<li>-->
-											<!--<a href="products_list.html">百货</a>-->
-										<!--</li>-->
-										<!--<li class="divider"></li>-->
-										<!--<li>-->
-											<!--<a href="products_list.html">美妆</a>-->
-										<!--</li>-->
-										<!--<li class="divider"></li>-->
-										<!---->
-										<!--<li>-->
-											<!--<a href="products_list.html">家具</a>-->
-										<!--</li>-->
-										<!--<li class="divider"></li>-->
-										<!--<li>-->
-											<!--<a href="products_list.html">男装</a>-->
-										<!--</li>-->
-										<!--<li class="divider"></li>-->
-										<!--<li>-->
-											<!--<a href="products_list.html">女装</a>-->
-										<!--</li>-->
-										<!--<li class="divider"></li>-->
-										<!--<li>-->
-											<!--<a href="products_list.html">数码</a>-->
-										<!--</li>-->
-										<!--<li class="divider"></li>-->
-										<!--<li>-->
-											<!--<a href="products_list.html">母婴</a>-->
-										<!--</li>-->
-										<!--<li class="divider"></li>-->
-									<!--</ul>-->
-								<!--</li>-->
-							<!--</li>-->
-							<!--<li>-->
-								<!--<a href="#" data-toggle="modal" data-target="#myModal">登录</a>-->
-							<!--</li>-->
-							<!--<li>-->
-								<!--<a href="index.html">安全退出</a>-->
-							<!--</li>-->
-							<!--<li>-->
-								<!--<a href="#" data-toggle="modal" data-target="#register">注册</a>-->
-							<!--</li>-->
-							<!--<li>-->
-								<!--<a href="order_list.html">我的订单</a>-->
-							<!--</li>-->
-							<!--<li>-->
-								<!--<a href="cart.html"><span class="glyphicon glyphicon-shopping-cart"> </span>我的购物车</a>-->
-							<!--</li>-->
-						<!--</ul>-->
-						<!--<div class="input-group col-md-3 pull-right" style="positon:relative;padding: 7px;">-->
-							<!--<input type="text" class="form-control" placeholder="请输入商品名" />-->
-							<!--<span class="input-group-btn">  -->
-					            <!--<button class="btn btn-info btn-search">-->
-					            	<!--<span class="glyphicon glyphicon-search"></span>-->
-					            <!--</button>-->
-							<!--</span>-->
-						<!--</div>-->
-					<!--</div>-->
-				<!--</div>-->
-			<!--</nav>-->
-		<!--</div>-->
+
 		<div th:replace="common/header :: header"></div>
 		<!--导航部分 end-->
 		<!--最顶端轮播图片 begin-->
@@ -284,38 +199,46 @@
 				</ol>
 
 			<!--猜您喜欢-->
+				<!--猜您喜欢-->
 				<div>
-					<span class="text-info"><span class="glyphicon glyphicon-heart"></span><span style="font-size: 20px; ">&nbsp;&nbsp;猜您喜欢</span></span>
+					<span class="text-info"><span class="glyphicon glyphicon-heart"></span><span
+							style="font-size: 20px; ">猜您喜欢</span></span>
 					<div class="row" id="love">
-						<div class="wow fadeInRight animated">
+						<div class="col-sm-12 col-md-12 wow fadeInRight animated">
 							<div class="thumbnail">
-								<a href="details.html"><img src="images/dongjian.jpg " th:src="@{/images/dongjian.jpg}" style="height: 200px; " alt="通用的占位符缩略图 "></a>
+								<a href="details.html"  th:href="@{/prod/detail(id=${3})}"><img src="images/xiaodaolifencunzhijian.jpg "
+																								th:src="@{/images/bi.jpg}"
+																								style="height: 200px; " alt="通用的占位符缩略图 "></a>
 								<div class="caption ">
-									<h3>洞见</h3>
+									<h3>中性笔</h3>
 								</div>
 							</div>
 						</div>
-						<div class="wow fadeInRight animated">
+						<div class="col-sm-12 col-md-12 wow fadeInRight animated">
 							<div class="thumbnail ">
-								<a href="details.html"><img src="images/tenxunchuan.jpg"  th:src="@{/images/tenxunchuan.jpg}" style="height: 200px; " alt="通用的占位符缩略图 "></a>
+								<a href="details.html" th:href="@{/prod/detail(id=${1})}"><img src="images/NO SECRETS.jpg "
+																							   th:src="@{/images/mate30.jpg}" style="height: 200px; "
+																							   alt="通用的占位符缩略图 "></a>
 								<div class="caption ">
-									<h3>腾讯传</h3>
+									<h3>华为mate30</h3>
 								</div>
 							</div>
 						</div>
-						<div class="wow fadeInRight animated">
+						<div class="col-sm-12 col-md-12 wow fadeInRight animated">
 							<div class="thumbnail ">
-								<a href="details.html"><img src="images/taikong.jpg" th:src="@{/images/taikong.jpg}"  style="height: 200px; " alt="通用的占位符缩略图 "></a>
+								<a href="details.html"  th:href="@{/prod/detail(id=${2})}"><img src="images/maichanpinjiushimaiziji.jpg"
+																								th:src="@{/images/jiandao.jpg}"
+																								style="height: 200px; " alt="通用的占位符缩略图 "></a>
 								<div class="caption ">
-									<h3>太空</h3>
+									<h3>剪刀</h3>
 								</div>
 							</div>
 						</div>
 						<div>
-							<ul class="pager">
+							<ul class="pager ">
 								<li>
-									<a href="#" onclick="pageUp() ">&larr;上一页</a>
-									<a href="#" onclick="pageDown() ">下一页 &rarr;</a>
+									<a href="# " onclick="pageUp() ">&larr;上一页</a>
+									<a href="# " onclick="pageDown() ">下一页 &rarr;</a>
 								</li>
 							</ul>
 						</div>
