--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -179,10 +179,10 @@
 						<a href="# " class="text-success "><span class="glyphicon glyphicon-shopping-cart "></span>我的购物车</a>
 					</li>
 					<li>
-						<a href="# ">3个商品</a>
+						<a href="# " th:text="${session.userCartInfo.num+'个商品'}">3个商品</a>
 					</li>
 					<li>
-						<a href="# ">总价100元</a>
+						<a href="# " th:text="${'总价'+session.userCartInfo.totalPrice+'元'}">总价100元</a>
 					</li>
 				</ol>
 
@@ -193,31 +193,31 @@
 					<div class="row" id="love">
 						<div class="col-sm-12 col-md-12 wow fadeInRight animated">
 							<div class="thumbnail">
-								<a href="details.html"><img src="images/xiaodaolifencunzhijian.jpg "
-															th:src="@{/images/xiaodaolifencunzhijian.jpg}"
+								<a href="details.html"  th:href="@{/prod/detail(id=${3})}"><img src="images/xiaodaolifencunzhijian.jpg "
+															th:src="@{/images/bi.jpg}"
 															style="height: 200px; " alt="通用的占位符缩略图 "></a>
 								<div class="caption ">
-									<h3>小道理：分寸之间</h3>
+									<h3>中性笔</h3>
 								</div>
 							</div>
 						</div>
 						<div class="col-sm-12 col-md-12 wow fadeInRight animated">
 							<div class="thumbnail ">
-								<a href="details.html"><img src="images/NO SECRETS.jpg "
-															th:src="@{/images/NO SECRETS.jpg}" style="height: 200px; "
+								<a href="details.html" th:href="@{/prod/detail(id=${1})}"><img src="images/NO SECRETS.jpg "
+															th:src="@{/images/mate30.jpg}" style="height: 200px; "
 															alt="通用的占位符缩略图 "></a>
 								<div class="caption ">
-									<h3>名创优品没有秘密</h3>
+									<h3>华为mate30</h3>
 								</div>
 							</div>
 						</div>
 						<div class="col-sm-12 col-md-12 wow fadeInRight animated">
 							<div class="thumbnail ">
-								<a href="details.html"><img src="images/maichanpinjiushimaiziji.jpg"
-															th:src="@{/images/maichanpinjiushimaiziji.jpg}"
+								<a href="details.html"  th:href="@{/prod/detail(id=${2})}"><img src="images/maichanpinjiushimaiziji.jpg"
+															th:src="@{/images/jiandao.jpg}"
 															style="height: 200px; " alt="通用的占位符缩略图 "></a>
 								<div class="caption ">
-									<h3>卖产品就是卖自己</h3>
+									<h3>剪刀</h3>
 								</div>
 							</div>
 						</div>
